# spacy_vector_matcher

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.py
src/knowledgator_spacy_vector_matcher/: __init__.py  embedding_pipeline_component.py  matcher.pxd  matcher.pyi  matcher.pyx  schemas.py  utils.py  utils.pyx
tests/: test_basic.py  test_embedding_layer.py
