[build-system]
requires = [
    "poetry-core",
    "spacy>=3.7.6,<3.8",
    "setuptools",
    "cython>=0.25,<3.0",
    "cymem>=2.0.2,<2.1.0",
    "preshed>=3.0.2,<3.1.0",
    "murmurhash>=0.28.0,<1.1.0",
    "thinc>=8.2.2,<8.3.0",
    "numpy>=1.15.0; python_version < '3.9'",
    "numpy>=1.25.0; python_version >= '3.9'",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "knowledgator_spacy_vector_matcher"
version = "0.0.1"
description = "Simple vector matcher extension for spaCy"
authors = ["knowledgator.com"]
readme = "README.md"
license = "Apache-2.0"
include = [{ path = "src/knowledgator_spacy_vector_matcher/**/*.so", format = "wheel" }]

[tool.poetry.build]
generate-setup-file = false
script = "setup.py"

[tool.poetry.dependencies]
python = "^3.12"
spacy = "^3.7.6"
